Continuing work on new logic.

--- a/public/index.html
+++ b/public/index.html
@@ -259,6 +259,11 @@
 										role: Role.BossSquadmateDeath,
 										supertext: "Boss Squadmate"
 									} } --><!-- /ko -->
+									<!-- ko component: { name: 'death-role-static', params: {
+										teammate: teammate,
+										role: Role.BossHoldingTheLineDeath,
+										supertext: "HTL"
+									} } --><!-- /ko -->
 								</td>
 							</tr>
 						<!-- /ko -->
@@ -310,351 +315,19 @@
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-
-			<div class="panel panel-default">
-				<!-- ko with: $root.state.stage -->
-					<div class="panel-heading">
-						<h2 class="panel-title" data-bind="text: label"></h2>
-					</div>
-				<!-- /ko -->
-
-				<div class="panel-body">
-					<!-- ko with: $root.state.stage -->
-						<!-- ko if: id === Constants.StageIDs.Setup -->
-							<div class="row">
-								<div class="col-md-8">
-									<h3>Teammates</h3>
-									<p>The game requires at least <strong>8</strong> teammates to be recruited.</p>
-									<table class="table table-rounded table-striped setup-table table-condensed">
-										<thead>
-										<tr>
-											<th width="60%"></th>
-											<th>
-												<div class="checkbox">
-													<label><input type="checkbox" data-bind="checked: all_recruited" /> Recruited</label>
-												</div>
-											</th>
-											<th>
-												<div class="checkbox">
-													<label><input type="checkbox" data-bind="checked: all_loyal" /> Loyal</label>
-												</div>
-											</th>
-										</tr>
-										</thead>
-										<tbody>
-										<!-- ko foreach: $root.state.teammates().value() -->
-										<tr>
-											<td>
-												<div class="checkbox">
-													<label>
-													<a href="#view-profile" data-bind="click: function () { $root.henchman(henchman) }, text: henchman.name"></a>
-													</label>
-												</div>
-											</td>
-											<td>
-												<div class="checkbox">
-													<label>
-														<input type="checkbox" data-bind="attr: { 'disabled': (henchman.is_essential ? 'disabled' : undefined) }, checked: is_recruited" /> &nbsp;
-													</label>
-												</div>
-											</td>
-											<td>
-												<div class="checkbox">
-													<label>
-														<input type="checkbox" data-bind="attr: { 'disabled': (is_recruited() ? undefined : 'disabled') }, checked: is_loyal" /> &nbsp;
-													</label>
-												</div>
-											</td>
-										</tr>
-										<!-- /ko -->
-										</tbody>
-									</table>
-								</div>
-								<div class="col-md-4">
-									<h3>Normandy</h3>
-									<form role="form">
-										<div class="form-group">
-											<label>Upgrades</label>
-											<div class="checkbox">
-												<label><input type="checkbox" data-bind="checked: $root.state.normandy.has_armour" /> <span data-placement="right" data-toggle="tooltip" data-html="true" title="Provided by <em>Jacob Taylor</em>">Has Armour upgrade?</span></label>
-											</div>
-											<div class="checkbox">
-												<label><input type="checkbox" data-bind="checked: $root.state.normandy.has_shielding" /> <span data-placement="right" data-toggle="tooltip" data-html="true" title="Provided by <em>Tali'zorah</em>">Has Shielding upgrade?</span></label>
-											</div>
-											<div class="checkbox">
-												<label><input type="checkbox" data-bind="checked: $root.state.normandy.has_thanix_cannon" /> <span data-placement="right" data-toggle="tooltip" data-html="true" title="Provided by <em>Garrus Vakarian</em>">Has Thanix Cannon?</span></label>
-											</div>
-										</div>
-										<div class="form-group">
-											<label for="normandy-delay"><span data-placement="right" data-toggle="tooltip" data-html="true" title="How many missions were undertaken between the crew being abducted and the Omega 4 relay being accessed.">Mission Delay</span></label>
-											<select class="form-control" id="normandy-delay" data-bind="options: Application.getDelayCandidates(), optionsText: Application.renderDelayValue, value: $root.state.normandy.delay"></select>
-										</div>
-									</form>
-								</div>
-							</div>
-
-
-						<!-- /ko -->
-						<!-- ko if: id === Constants.StageIDs.Occulus -->
-							<form role="form">
-								<div class="row">
-									<div class="col-sm-6">
-										<div class="form-group">
-											<label for="occulus-squadmate-1">Squadmate #1</label>
-											<select class="form-control" id="occulus-squadmate-1" data-bind="options: getFieldCandidates('occulus_squadmate_1'), optionsText: Application.renderTeammateName, value: getFieldObservable('occulus_squadmate_1')"></select>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="form-group">
-											<label for="occulus-squadmate-2">Squadmate #2</label>
-											<select class="form-control" id="occulus-squadmate-2" data-bind="options: getFieldCandidates('occulus_squadmate_2'), optionsText: Application.renderTeammateName, value: getFieldObservable('occulus_squadmate_2')"></select>
-										</div>
-									</div>
+					<div class="row">
+						<div class="col-sm-12">
+							<form role="form" class="form-horizontal">
+								<div class="input-group">
+									<span class="input-group-addon">State</span>
+									<input class="form-control" type="text" data-bind="value: serialised" />
+									<span class="input-group-btn">
+										<button class="btn btn-primary" type="button" data-bind="click: function () { $root.share($data.serialised()) }">Share</button>
+									</span>
 								</div>
 							</form>
-						<!-- /ko -->
-						<!-- ko if: id === Constants.StageIDs.Vents -->
-							<form role="form">
-								<div class="row">
-									<div class="col-sm-6">
-										<div class="form-group">
-											<label for="vent-venter">Vents</label>
-											<select class="form-control" id="vent-venter" data-bind="options: getFieldCandidates('vent_venter'), optionsText: Application.renderTeammateNameVentVenter, value: getFieldObservable('vent_venter')"></select>
-										</div>
-										<div class="form-group">
-											<label for="vent-leader">Leader</label>
-											<select class="form-control" id="vent-leader" data-bind="options: getFieldCandidates('vent_leader'), optionsText: Application.renderTeammateNameVentLeader, value: getFieldObservable('vent_leader')"></select>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="form-group">
-											<label for="vent-squadmate-1">Squadmate #1</label>
-											<select class="form-control" id="vent-squadmate-1" data-bind="options: getFieldCandidates('vent_squadmate_1'), optionsText: Application.renderTeammateName, value: getFieldObservable('vent_squadmate_1')"></select>
-										</div>
-										<div class="form-group">
-											<label for="vent-squadmate-1">Squadmate #2</label>
-											<select class="form-control" id="vent-squadmate-1" data-bind="options: getFieldCandidates('vent_squadmate_2'), optionsText: Application.renderTeammateName, value: getFieldObservable('vent_squadmate_2')"></select>
-										</div>
-									</div>
-								</div>
-							</form>
-						<!-- /ko -->
-						<!-- ko if: id === Constants.StageIDs.LongWalk -->
-							<form role="form">
-								<div class="row">
-									<div class="col-sm-6">
-										<div class="form-group">
-											<label for="long-walk-bubbler">Biotic Bubble</label>
-											<select class="form-control" id="long-walk-bubbler" data-bind="options: getFieldCandidates('long_walk_bubbler'), optionsText: Application.renderTeammateNameLongWalkBubbler, value: getFieldObservable('long_walk_bubbler')"></select>
-										</div>
-										<div class="form-group">
-											<label for="long-walk-leader">Leader</label>
-											<select class="form-control" id="long-walk-leader" data-bind="options: getFieldCandidates('long_walk_leader'), optionsText: Application.renderTeammateNameLongWalkLeader, value: getFieldObservable('long_walk_leader')"></select>
-										</div>
-										<div class="form-group">
-											<label for="long-walk-escort">Escort</label>
-											<select class="form-control" id="long-walk-escort" data-bind="options: getFieldCandidates('long_walk_escort'), optionsText: Application.renderTeammateNameLongWalkEscort, value: getFieldObservable('long_walk_escort')"></select>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="form-group">
-											<label for="long-walk-squadmate-1">Squadmate #1</label>
-											<select class="form-control" id="long-walk-squadmate-1" data-bind="options: getFieldCandidates('long_walk_squadmate_1'), optionsText: Application.renderTeammateName, value: getFieldObservable('long_walk_squadmate_1')"></select>
-										</div>
-										<div class="form-group">
-											<label for="long-walk-squadmate-2">Squadmate #2</label>
-											<select class="form-control" id="long-walk-squadmate-2" data-bind="options: getFieldCandidates('long_walk_squadmate_2'), optionsText: Application.renderTeammateName, value: getFieldObservable('long_walk_squadmate_2')"></select>
-										</div>
-									</div>
-								</div>
-							</form>
-						<!-- /ko -->
-						<!-- ko if: id == Constants.StageIDs.Boss -->
-							<form role="form">
-								<div class="row">
-									<!-- ko with: getField('boss_squadmate_1') -->
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label for="boss-squadmate-1">Squadmate #1</label>
-												<select class="form-control" id="boss-squadmate-2" data-bind="options: candidates, optionsText: Application.renderTeammateNameBossSquadmate, value: observable"></select>
-											</div>
-										</div>
-									<!-- /ko -->
-									<!-- ko with: getField('boss_squadmate_2') -->
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label for="boss-squadmate-2">Squadmate #2</label>
-												<select class="form-control" id="boss-squadmate-2" data-bind="options: candidates, optionsText: Application.renderTeammateNameBossSquadmate, value: observable"></select>
-											</div>
-										</div>
-									<!-- /ko -->
-								</div>
-							</form>
-						<!-- /ko -->
-						<!-- ko if: id === Constants.StageIDs.Summary -->
-							<form role="form">
-								<div class="row">
-									<div class="col-md-4 col-sm-6">
-										<div class="form-group">
-											<label>Reports on defence</label>
-											<p class="form-control-static" data-bind="text: Application.renderTeammateName(defence_reporter())"></p>
-										</div>
-										<div class="form-group">
-											<label>Advocates keeping the base</label>
-											<p class="form-control-static" data-bind="text: Application.renderTeammateNameKeepBaseAdvocate(keep_base_advocate())"></p>
-										</div>
-										<div class="form-group">
-											<label>Advocates destroying the base</label>
-											<p class="form-control-static" data-bind="text: Application.renderTeammateName(destroy_base_advocate())"></p>
-										</div>
-									</div>
-									<div class="col-md-4 col-sm-6">
-										<div class="form-group">
-											<label>Shepard lives</label>
-											<p class="form-control-static" data-bind="text: Application.renderYesNo(shepard_lives())"></p>
-										</div>
-										<div class="form-group">
-											<label>Shepard caught by</label>
-											<p class="form-control-static" data-bind="text: Application.renderTeammateName(shepard_pulled_up_by())"></p>
-										</div>
-										<div class="form-group">
-											<label>Crew</label>
-											<p class="form-control-static" data-bind="text: Application.renderCrewSurvival(crew_survival())"></p>
-										</div>
-									</div>
-									<div class="col-md-4 col-sm-12">
-										<div class="form-group">
-											<label>Hold the line score</label>
-											<p class="form-control-static">
-												<span data-bind="text: htl_total"></span> ÷ <span data-bind="text: htl_candidates_count"></span> = <span data-bind="text: htl_score"></span>
-											</p>
-										</div>
-										<div class="form-group">
-											<label>Hold the line deaths</label>
-											<p class="form-control-static" data-bind="text: htl_death_count"></p>
-										</div>
-									</div>
-								</div>
-							</form>
-						<!-- /ko -->
-					<!-- /ko -->
-
-					<div class="table-responsive">
-						<table class="table table-rounded table-striped summary-table table-hover table-condensed" data-bind="visible: $root.state.stage().id !== Constants.StageIDs.Setup">
-							<thead>
-								<tr>
-									<th>Teammates</th>
-									<th class="hidden-xs">Death</th>
-									<th><span class="visible-xs-inline">O</span><span class="hidden-xs">Occulus</span></th>
-									<th><span class="visible-xs-inline">V</span><span class="hidden-xs">Vents</span></th>
-									<th><span class="visible-xs-inline">LW</span><span class="hidden-xs">Long Walk</span></th>
-									<th><span class="visible-xs-inline">B</span><span class="hidden-xs">Boss</span></th>
-								</tr>
-							</thead>
-							<tbody>
-								<!-- ko with: $root.state.teammates().sortByIsRecruited().value() -->
-									<!-- ko foreach: $data -->
-										<tr data-bind="css: {'text-info info': !is_recruited() }, click: function () { $root.henchman(henchman) }">
-											<td data-bind="css: { 'danger text-danger': is_dead(), 'warning text-warning': $root.predictedToBeDead($data) }">
-												<span data-bind="text: henchman.name"></span> <!-- ko if: is_loyal() --><span class="glyphicon glyphicon-heart"></span><!-- /ko -->
-											</td>
-											<td data-bind="css: { 'hidden-xs': true, 'danger text-danger': is_dead(), 'warning text-warning': $root.predictedToBeDead($data) }">
-												<!-- ko if: is_dead() -->
-													<span data-bind="text: Application.renderTeammateDeathCause(death_cause())"></span>
-												<!-- /ko -->
-												<!-- ko if: $root.predictedToBeDead($data) -->
-													<!-- ko with: $root.state.stage().evaluate().find($data) -->
-														<span data-bind="text: Application.renderTeammateDeathCause($data.death_cause)"></span>
-													<!-- /ko -->
-												<!-- /ko -->
-											</td>
-											<td data-bind="css: { 'danger': (is_dead() && death_stage_id() === Constants.StageIDs.Occulus) }">
-												<!-- ko if: hasRole(Constants.TeammateRoles.OcculusSquadmate1) -->
-													<span class="glyphicon glyphicon-user"></span><sup>1</sup>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.OcculusSquadmate2) -->
-													<span class="glyphicon glyphicon-user"></span><sup>2</sup>
-												<!-- /ko -->
-											</td>
-											<td data-bind="css: { 'danger': (is_dead() && death_stage_id() === Constants.StageIDs.Vents) }">
-												<!-- ko if: hasRole(Constants.TeammateRoles.VentsSquadmate1) -->
-												<span class="glyphicon glyphicon-user"></span><sup>1</sup>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.VentsSquadmate2) -->
-												<span class="glyphicon glyphicon-user"></span><sup>2</sup>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.VentsVenter) -->
-													<span class="glyphicon glyphicon-star"></span>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.VentsLeader) -->
-													<span class="glyphicon glyphicon-fire"></span>
-												<!-- /ko -->
-											</td>
-											<td data-bind="css: { 'danger': (is_dead() && death_stage_id() === Constants.StageIDs.LongWalk) }">
-												<!-- ko if: hasRole(Constants.TeammateRoles.LongWalkSquadmate1) -->
-												<span class="glyphicon glyphicon-user"></span><sup>1</sup>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.LongWalkSquadmate2) -->
-												<span class="glyphicon glyphicon-user"></span><sup>2</sup>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.LongWalkBubbler) -->
-													<span class="glyphicon glyphicon-star"></span>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.LongWalkLeader) -->
-													<span class="glyphicon glyphicon-fire"></span>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.LongWalkEscort) -->
-													<span class="glyphicon glyphicon-heart-empty"></span>
-												<!-- /ko -->
-											</td>
-											<td data-bind="css: { 'danger': (is_dead() && death_stage_id() === Constants.StageIDs.Boss) }">
-												<!-- ko if: hasRole(Constants.TeammateRoles.BossSquadmate1) -->
-													<span class="glyphicon glyphicon-user"></span><sup>1</sup>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.BossSquadmate2) -->
-													<span class="glyphicon glyphicon-user"></span><sup>2</sup>
-												<!-- /ko -->
-												<!-- ko if: hasRole(Constants.TeammateRoles.HeldTheLine) -->
-													<span class="glyphicon glyphicon-flash"></span>
-												<!-- /ko -->
-											</td>
-										</tr>
-									<!-- /ko -->
-								<!-- /ko -->
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<div class="panel-footer">
-					<!-- ko with: $root.state.stage -->
-						<div class="row">
-							<div class="col-xs-4">
-								<button class="btn btn-default btn-block" data-bind="enable: $root.stager.can_go_back, click: function () { $root.stager.back() }">Back</button>
-							</div>
-							<div class="col-xs-4">
-								<button class="btn btn-warning btn-block" data-bind="click: function () { $root.stager.reset() }">Reset</button>
-							</div>
-							<div class="col-xs-4">
-								<button class="" data-bind="enable: is_evaluatable, attr: { 'class': (is_evaluatable() ? 'btn btn-success btn-block' : 'btn btn-default btn-block') }, click: function () { $root.stager.next() }">Next</button>
-							</div>
 						</div>
-						<div class="row">
-							<div class="col-sm-12">
-								<form role="form" class="form-horizontal">
-									<div class="input-group">
-										<span class="input-group-addon">State</span>
-										<input class="form-control" type="text" id="serialised" data-bind="value: $root.state.serialised" />
-										<span class="input-group-btn">
-											<button class="btn btn-warning" type="button" data-bind="click: function () { $root.state.applySerialisedState($('#serialised').val()) }">Restore</button>
-											<button class="btn btn-primary" type="button" data-bind="click: function () { $root.share($('#serialised').val()) }">Share</button>
-										</span>
-									</div>
-								</form>
-							</div>
-						</div>
-					<!-- /ko -->
+					</div>
 				</div>
 			</div>
 		</div>
